# rag-product

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: CLAUDE.md  PROJECT.md
.claude/agents/: api-builder.md  api.md  code-analyzer.md  code-reviewer.md  domain.md  risk-analyst.md  schema-builder.md  security-analyst.md  service-builder.md  spec-reviewer.md  temporal.md  test-builder.md  test-designer.md  test-reviewer.md  test.md
.claude/agents/_project/: embedding.md  qdrant.md  redis.md  temporal.md
.claude/commands/: change.md  feature.md  fix.md  review.md  spec.md
app/: __init__.py  main.py
app/api/: router.py
app/core/: config.py  dependencies.py  exceptions.py
tests/unit/: test_health.py
workers/: __init__.py  main.py
workers/activities/: __init__.py  health.py
workers/workflows/: __init__.py
